--- a/indext.html
+++ b/indext.html
@@ -8,7 +8,7 @@
     <h1>Odin-Recipes</h1>
     <ul>
         <li><a href="./page/KOOL-AID PICKLES.html">KOOL-AID PICKLES</a></li>
-        <li>  <a href="./page/KARSTAS-VANDUO.html">FRIED-MILK</a></li>
+        <li>  <a href="./page/KARSTAS-VANDUO.html">KARSTAS-VANDUO</a></li>
         <li> <a href="./page/CHOCOLATE MOOSE.html">CHOCOLATE MOOSE</a></li>
     </ul>
 </body>
