Sukurtas CHOCOLATE-MOOSE page content idedas listas igridientu ir zingsniu

--- a/indext.html
+++ b/indext.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Odin-Recipes</h1>
+    <img src="./images/indexpage.jpeg" alt="brudas">
     <ul>
         <li><a href="./page/KOOL-AID PICKLES.html">KOOL-AID PICKLES</a></li>
         <li>  <a href="./page/KARSTAS-VANDUO.html">KARSTAS-VANDUO</a></li>
